<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="appName">ezSleep</string>

    <!--recordFragement -->
    <string name="recording">녹음 중입니다...</string>
    <string name="recordStart">녹음 시작</string>
    <string name="recordEnd">녹음 종료</string>

    <!--resultActivity -->
    <string name="status">오늘 수면은 어떠셨나요?</string>
    <string name="score">%1$d점</string>
    <string name="allBtn">전체</string>
    <string name="snoreBtn">코골이</string>
    <string name="grindBtn">이갈이</string>
    <string name="apneaBtn">무호흡</string>

    <string-array name="statusArr">
        <item >숙면</item>
        <item >음주</item>
        <item >야식</item>
        <item >운동</item>
        <item >흡연</item>
        <item >카페인</item>
    </string-array>

    <!--statFragment-->
    <string name="goodSleepRow">숙면</string>
    <string name="snoreRow">코골이</string>
    <string name="grindRow">이갈이</string>
    <string name="apneaRow">무호흡</string>

    <!--settingFragment-->
    <string name="profile">프로필</string>
    <string name="expertConsultationHistory">전문가 상담 내역</string>
    <string name="userMp3FileManage">사용자 음성 파일 관리</string>

    <!--profileActivity-->
    <string name="pfAge">나이</string>
    <string name="pfGender">성별</string>
    <string name="pfWeight">몸무게</string>
    <string name="pfHeight">신장</string>


    <!--mp3ManageActivity-->
    <string name="mp3ManageTxt">파일 저장 기간</string>
    <string name="mp3ManageDay">일</string>


    <!--UserConsultListActivity-->
    <string name="uclHeaderTxt">전문가 상담 내역</string>

    <!--btn-->
    <string name="saveBtn">저장하기</string>
    <string name="confirmBtn">확인</string>
    <string name="cancelBtn">취소</string>
    <string name="yesBtn">예</string>
    <string name="noBtn">아니오</string>
    <string name="sendBtn">보내기</string>

    <!--reportActivity-->
    <string name="reportHeader">잘못된 결과가 나왔나요?</string>
    <string name="reportContentsTxt">이 결과가 마음에 들지 않는다면 저희에게 알려주세요</string>



    <!--error property-->
    <string name="error_server">서버에 접속 할 수없습니다.\n관리자에게 문의해주세요.</string>
    <string name="error_server_getRecordList">기록을 불러올 수 없습니다.\n관리자에게 문의해주세요.</string>

</resources>
